[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/preview.gd" type="Script" id=2]

[node name="preview_model" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preview" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vport" type="Viewport" parent="preview"]
size = Vector2( 1366, 768 )
size_override_stretch = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="preview/vport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="PanelContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer"]
margin_right = 41.0
margin_bottom = 16.0
size_flags_vertical = 1
text = "Zoom:"

[node name="zoom" type="HSlider" parent="PanelContainer"]
margin_left = 45.0
margin_right = 1366.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 2.0
max_value = 10.0
step = 0.1
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="preview" to="." method="_on_preview_mouse_entered"]
[connection signal="mouse_exited" from="preview" to="." method="_on_preview_mouse_exited"]
[connection signal="value_changed" from="PanelContainer/zoom" to="." method="_on_zoom_value_changed"]
